--- a/ثقافة.md
+++ b/ثقافة.md
@@ -1,4 +1,4 @@
 # أفضل المواقع الثقافية
 
-- http://mawdoo3.com/
-- http://www.ibda3world.com/
+- [mawdoo3](http://mawdoo3.com/)
+- [ibda3world](http://www.ibda3world.com/)
