--- a/اعلانات.md
+++ b/اعلانات.md
@@ -1,4 +1,4 @@
 # أفضل مواقع الاعلانات 
 
-- https://ads.hsoub.com/
-- https://xaddad.com/
+- [hsoub](https://ads.hsoub.com/)
+- [xaddad](https://xaddad.com/)
