--- a/برمجة.md
+++ b/برمجة.md
@@ -1,4 +1,4 @@
 # أفضل مواقع البرمجة 
 
-- http://www.barmaje.com/
-- http://www.boosla.com/
+- [barmaje](http://www.barmaje.com/)
+- [boosla](http://www.boosla.com/)
