--- a/اعلانات.md
+++ b/اعلانات.md
@@ -1,4 +1,4 @@
 # أفضل مواقع الاعلانات 
 
-- [hsoub](https://ads.hsoub.com/)
-- [xaddad](https://xaddad.com/)
+- [حسوب](https://ads.hsoub.com/)
+- [عدّاد](https://xaddad.com/)
