--- a/برمجة.md
+++ b/برمجة.md
@@ -1,4 +1,4 @@
 # أفضل مواقع البرمجة 
 
-- [barmaje](http://www.barmaje.com/)
-- [boosla](http://www.boosla.com/)
+- [برمجة](http://www.barmaje.com/)
+- [البوصلة](http://www.boosla.com/)
