--- a/تصميم.md
+++ b/تصميم.md
@@ -1,4 +1,4 @@
 # أفضل مواقع التصميم 
 
-- [fwasl](http://www.fwasl.com/)
-- [colorslab](http://www.colorslab.net/)
+- [فواصل](http://www.fwasl.com/)
+- [معمل ألوان](http://www.colorslab.net/)
