--- a/تعليمية.md
+++ b/تعليمية.md
@@ -1,7 +1,7 @@
 # أفضل المواقع التعليمية 
 
-- [refdacademy](http://refdacademy.com)
-- [edraak](https://www.edraak.org/)
+- [آكاديمية رِفْد](http://refdacademy.com)
+- [إدراك](https://www.edraak.org/)
 - [medinakids](http://www.medinakids.com)
 - [rwaq](http://www.rwaq.org)
 - [hindawi](http://www.hindawi.org)
