--- a/إخبارية.md
+++ b/إخبارية.md
@@ -2,3 +2,4 @@
 
 - [الجزيرة](http://www.aljazeera.net/portal)
 - [العربية](http://www.alarabiya.net/)
+- [هافينغتون بوست عربي](http://www.huffpostarabi.com/)
