--- a/ثقافة.md
+++ b/ثقافة.md
@@ -1,4 +1,5 @@
 # أفضل المواقع الثقافية
 
-- [mawdoo3](http://mawdoo3.com/)
-- [ibda3world](http://www.ibda3world.com/)
+- [موضوع](http://mawdoo3.com/)
+- [عالم الابداع](http://www.ibda3world.com/)
+- [ساسة بوست](http://www.sasapost.com/)
